Frontend  - install shadcn comp  - create sideBar for Nav

--- a/client/components.json
+++ b/client/components.json
@@ -3,6 +3,7 @@
   "style": "new-york",
   "rsc": false,
   "tsx": false,
+  "path": "src/components",
   "tailwind": {
     "config": "",
     "css": "src/index.css",
