--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
