--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.1",
     "passport": "^0.7.0",
     "passport-github": "^1.1.0",
     "passport-github2": "^0.1.12",
