--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "validate-image-type": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
