--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^5.1.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
+    "file-type": "^21.0.0",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "passport": "^0.7.0",
