--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.13.2",
     "framer-motion": "^12.15.0",
+    "frimousse": "^0.3.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
