--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "emoji-picker-react": "^4.13.2",
     "framer-motion": "^12.15.0",
     "frimousse": "^0.3.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
