--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,11 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
     "file-type": "^21.0.0",
+    "github-oauth": "^0.2.2",
+    "google-oauth": "^0.0.2",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-github": "^1.1.0",
     "passport-github2": "^0.1.12",
